SERVER-9391 tailable cursors should throw an exception in DBClientCursor when a cursor is not found on the server